--- a/week-6/Rivas-6.2.html
+++ b/week-6/Rivas-6.2.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-tofit=no">
- <title>ViewModel Example</title>
+ <title>Object Literal 6.3 Example</title>
  <!-- Stylesheet - Bootstrap -->
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-
 beta.2/css/bootstrap.min.css"
@@ -29,7 +29,7 @@ crossorigin="anonymous">
 </nav>
 <div role="main" class="container">
  <br /><br />
- <h2>Rhonda's Knockout ViewModel Function Object Example 6.2</h2>
+ <h2>Rhonda's Object Literal Example 6.3</h2>
  <div class="form-group">
  <label for="txtFirstName">First Name:</label>
  <input type="text" class="form-control alert-warning" data-bind="value: firstName"
