--- a/week-8/Rivas-8.4.html
+++ b/week-8/Rivas-8.4.html
@@ -155,7 +155,7 @@
             var employeeList=[
                 new Employee(1, "Harrison Ford"),
                 new Employee(2, "Mark Hamil"),
-                new Employee(3, "Carrier Fisher"),
+                new Employee(3, "Carrie Fisher"),
                 new Employee(4, "Peter Mayhew"),
                 new Employee(5, "Anthony Daniels")
             ];
